--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,12 @@
     <div class="products-area"></div>
     <div class="cart-area">
       <div class="cart-card">
-        
+        <p class="cart-name">Your Order (3)</p>
+        <ul class="order-list">
+          <li class="product">test</li>
+          <li class="product">test</li>
+          <li class="product">test</li>
+        </ul>
       </div>
     </div>
   </div>
